--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="50dp">
 
-        <TextView
-            android:id="@+id/textView2"
+        <EditText
+            android:id="@+id/loan_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Loam Amount:" />
+            android:hint="Loan Amount:"
+            android:minHeight="48dp" />
 
-        <TextView
-            android:id="@+id/textView3"
+        <EditText
+            android:id="@+id/interest_rate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Interest Rate" />
+            android:hint="Interest Rate:"
+            android:minHeight="48dp" />
 
-        <TextView
-            android:id="@+id/textView4"
+        <EditText
+            android:id="@+id/loan_term"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:hint="Loan Term (in years):"
+            android:minHeight="48dp" />
 
-        <TextView
-            android:id="@+id/textView5"
+        <EditText
+            android:id="@+id/loan_fees"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:hint="Loan Fees:"
+            android:minHeight="48dp" />
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_gravity="center"
+            android:text="Calculate" />
+
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="337dp">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </LinearLayout>
