--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,28 +14,28 @@
         android:padding="50dp">
 
         <EditText
-            android:id="@+id/loan_amount"
+            android:id="@+id/loanAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Loan Amount:"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/interest_rate"
+            android:id="@+id/interestRate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Interest Rate:"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/loan_term"
+            android:id="@+id/loanTerm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Loan Term (in years):"
             android:minHeight="48dp" />
 
         <EditText
-            android:id="@+id/loan_fees"
+            android:id="@+id/loanFees"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Loan Fees:"
