Finished project but the formula for the total might be off.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:minHeight="48dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/calculateButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
