--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,6 +41,12 @@
             android:layout_height="wrap_content"
             android:hint="Loan Fees:"
             android:minHeight="48dp" />
+        <EditText
+            android:id="@+id/minPayment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Minimum Payment::"
+            android:minHeight="48dp" />
 
         <Button
             android:id="@+id/calculateButton"
@@ -50,11 +57,7 @@
 
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="337dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
