Finished output and minimum payment, project complete
edit:project actually complete made it so it doesnt crash if fees and minimum payment arent there

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
             android:id="@+id/minPayment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Minimum Payment::"
+            android:hint="Minimum Payment:"
             android:minHeight="48dp" />
 
         <Button
